[JSC] Fix build failure on musl: Add fallback for roundeven and roundevenf https://bugs.webkit.org/show_bug.cgi?id=281216

Reviewed by Yusuke Suzuki.

While building WPEWebKit on musl-based systems, errors occur due to
the absence of roundevenf and roundeven functions. These are not
available in musl and other non-glibc platforms.

This patch provides fallback implementations for both functions.

* Source/JavaScriptCore/runtime/MathCommon.cpp:
(JSC::Math::roundevenf):
(JSC::Math::roundeven):

Canonical link: https://commits.webkit.org/285058@main